<resources>
    <string name="app_name">AppDemo</string>
    <string name="Layout">Layout</string>
    <string name="RecycleView">RecycleView</string>
    <string name="LinearLayout">LinearLayout</string>
    <string name="RelativeLayout">RelativeLayout</string>
    <string name="AbsoluteLayout">AbsoluteLayout</string>
    <string name="FrameLayout">FrameLayout</string>
    <string name="TableLayout">TableLayout</string>
    <string name="BRVAH">BRVAH</string>
    <string name="Fragment">Fragment</string>

    <!-- RecycleView String -->
    <string name="vertical_list">vertical</string>
    <string name="horizontal_list">horizontal</string>

    <string name="vertical_grid">vertical grid</string>
    <string name="horizontal_grid">horizontal grid</string>
    <!-- RecycleView String -->
    <!-- LinearLayout String -->
    <string name="Cut">Cut</string>
    <string name="Copy">Copy</string>
    <string name="Undo">Undo</string>
    <string name="Redo">Redo</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- LinearLayout String -->
    <!-- RelativeLayout String -->

    <!-- RelativeLayout String -->
    <!-- AbsoluteLayout String -->

    <!-- AbsoluteLayout String -->
    <!-- FrameLayout String -->

    <!-- FrameLayout String -->
    <!-- LinearLayout String -->

    <!-- LinearLayout String -->

    <!-- Fragment String -->
    <string name="fg_Title">iChat</string>
    <string name="name">Name</string>
    <string name="chat_content">Chat Contents</string>

    <!-- Fragment String -->
</resources>