<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:orientation="vertical">
        <TextView
            android:id="@+id/Layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Layout"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/RecycleView"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/RecycleView"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/LinearLayout"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/LinearLayout"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/RelativeLayout"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/RelativeLayout"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/AbsoluteLayout"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/AbsoluteLayout"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/FrameLayout"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/FrameLayout"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/TableLayout"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/TableLayout"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/BRVAH"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/BRVAH"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/Fragment"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/Fragment"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:onClick="onClick"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>